author name inconsistency

--- a/refs.bib
+++ b/refs.bib
@@ -468,7 +468,7 @@
 }
 @inproceedings{seo11b,
     title = {{Open neighborhood locating-domination for infinite cylinders}},
-    author = {S. J. Seo and P. J. Slater},
+    author = {S. Seo and P. Slater},
     booktitle = {{Proceedings of the 49th Annual Southeast Regional Conference}},
     year = {2011},
     pages = {334-335},
@@ -1045,7 +1045,7 @@
 }
 @article{hayn98a,
     title = {{Fundamentals of Domination in Graphs}},
-    author = {T. W. Haynes and S. T. Hedetniemi and P. J. Slater},
+    author = {T. W. Haynes and S. T. Hedetniemi and P. Slater},
     journal = {{CRC press}},
     publisher = {Marcel Dekker},
     year = {1998},
@@ -1912,7 +1912,7 @@
 }
 @article{char02c,
     title = {{The locating-chromatic number of a graph}},
-    author = {G. Chartrand and D. Erwin and M. A. Henning and P. J. Slater and P. Zhang},
+    author = {G. Chartrand and D. Erwin and M. A. Henning and P. Slater and P. Zhang},
     journal = {{Bulletin of the Institute of Combinatorics and its Applications}},
     year = {2002},
     pages = {89--101},
@@ -1920,7 +1920,7 @@
 }
 @article{char03d,
     title = {{Graphs of order $n$ with locating-chromatic number $n-1$}},
-    author = {G. Chartrand and D. Erwin and M. A. Henning and P. J. Slater and P. Zhang},
+    author = {G. Chartrand and D. Erwin and M. A. Henning and P. Slater and P. Zhang},
     journal = {{Discrete Mathematics}},
     year = {2003},
     pages = {65--79},
@@ -1928,7 +1928,7 @@
 }
 @article{char03e,
     title = {{Distance-location numbers of graphs}},
-    author = {G. Chartrand and D. Erwin and P. J. Slater and P. Zhang},
+    author = {G. Chartrand and D. Erwin and P. Slater and P. Zhang},
     journal = {{Utilitas Mathematica}},
     year = {2003},
     pages = {65--79},
@@ -1944,7 +1944,7 @@
 }
 @article{chel10,
     title = {{On locating-domination in graphs}},
-    author = {M. Chellali and M. Mimouni and P. J. Slater},
+    author = {M. Chellali and M. Mimouni and P. Slater},
     journal = {{Discussiones Mathematicae Graph Theory}},
     year = {2010},
     pages = {223--235},
@@ -1952,7 +1952,7 @@
 }
 @article{chel14,
     title = {{On open neighborhood locating-dominating in graphs}},
-    author = {M. Chellali and N. J. Rad and S. J. Seo and P. J. Slater},
+    author = {M. Chellali and N. J. Rad and S. Seo and P. Slater},
     journal = {{Electronic Journal of Graph Theory and Applications}},
     year = {2014},
     pages = {87--98},
@@ -3478,7 +3478,7 @@
 }
 @article{rall84a,
     title = {{On location-domination numbers for certain classes of graphs}},
-    author = {D. F. Rall and P. J. Slater},
+    author = {D. F. Rall and P. Slater},
     journal = {{Congressus Numerantium}},
     year = {1984},
     pages = {97--106},
@@ -3585,7 +3585,7 @@
 }
 @article{rode09,
     title = {{Liar's domination in graphs}},
-    author = {M. L. Roden and P. J. Slater},
+    author = {M. L. Roden and P. Slater},
     journal = {{Discrete Mathematics}},
     year = {2009},
     pages = {5884--5890},
@@ -3657,7 +3657,7 @@
 }
 @article{seo18,
     title = {{Open-locating-dominating sets in the infinite king grid}},
-    author = {S. J. Seo},
+    author = {S. Seo},
     journal = {{Journal of Combinatorial Mathematics and Combinatorial Computing}},
     year = {2018},
     pages = {31--47},
@@ -3665,7 +3665,7 @@
 }
 @article{seo21c,
     title = {{Fault-tolerant detectors for distinguishing sets in cubic graphs}},
-    author = {S. J. Seo},
+    author = {S. Seo},
     journal = {{Discrete Applied Mathematics}},
     year = {2021},
     pages = {25--33},
@@ -3673,7 +3673,7 @@
 }
 @article{seo10,
     title = {{Open neighborhood locating-dominating sets}},
-    author = {S. J. Seo and P. J. Slater},
+    author = {S. Seo and P. Slater},
     journal = {{Australasian Journal of Combinatorics}},
     year = {2010},
     pages = {109--119},
@@ -3681,7 +3681,7 @@
 }
 @article{seo11,
     title = {{Open neighborhood locating-dominating in trees}},
-    author = {S. J. Seo and P. J. Slater},
+    author = {S. Seo and P. Slater},
     journal = {{Discrete Applied Mathematics}},
     year = {2011},
     pages = {484--489},
@@ -3689,7 +3689,7 @@
 }
 @article{seo12a,
     title = {{Graphical parameters for classes of tumbling block graphs}},
-    author = {S. J. Seo and P. J. Slater},
+    author = {S. Seo and P. Slater},
     journal = {{Congressus Numerantium}},
     year = {2012},
     pages = {155--168},
@@ -3697,7 +3697,7 @@
 }
 @article{seo12,
     title = {{Open neighborhood locating-domination for grid-like graphs}},
-    author = {S. J. Seo and P. J. Slater},
+    author = {S. Seo and P. Slater},
     journal = {{Bulletin of the Institute of Combinatorics and its Applications}},
     year = {2012},
     pages = {89--100},
@@ -3705,7 +3705,7 @@
 }
 @article{seo14,
     title = {{OLD trees with maximum degree three}},
-    author = {S. J. Seo and P. J. Slater},
+    author = {S. Seo and P. Slater},
     journal = {{Utilitas Mathematica}},
     year = {2014},
     pages = {361--380},
@@ -3713,7 +3713,7 @@
 }
 @article{seo15,
     title = {{Fault tolerant detectors for distinguishing sets in graphs}},
-    author = {S. J. Seo and P. J. Slater},
+    author = {S. Seo and P. Slater},
     journal = {{Discussiones Mathematicae Graph Theory}},
     year = {2015},
     pages = {797--818},
@@ -3721,7 +3721,7 @@
 }
 @article{seo17z,
     title = {{Open-independent, open-locating-dominating sets}},
-    author = {S. J. Seo and P. J. Slater},
+    author = {S. Seo and P. Slater},
     journal = {{Electronic Journal of Graph Theory and Applications}},
     year = {2017},
     pages = {179--193},
@@ -3729,7 +3729,7 @@
 }
 @article{sewe10,
     title = {{Locating mobile intruders using dominating sets}},
-    author = {J. L. Sewell and P. J. Slater},
+    author = {J. Sewell and P. Slater},
     journal = {{Journal of Combinator2050046ial Mathematics and Combinatorial Computing}},
     year = {2010},
     pages = {253--267},
@@ -3737,7 +3737,7 @@
 }
 @article{sewe14,
     title = {{A sharp lower bound for locating-dominating sets in trees}},
-    author = {J. L. Sewell and P. J. Slater},
+    author = {J. Sewell and P. Slater},
     journal = {{Australasian Journal of Combinatorics}},
     year = {2014},
     pages = {136--149},
@@ -3795,7 +3795,7 @@
 }
 @article{slat75a,
     title = {{Leaves of trees}},
-    author = {P. J. Slater},
+    author = {P. Slater},
     journal = {{Congressus Numerantium}},
     year = {1975},
     pages = {549--559},
@@ -3803,14 +3803,14 @@
 }
 @article{slat83,
     title = {{Domination and location in graphs}},
-    author = {P. J. Slater},
+    author = {P. Slater},
     journal = {{National University of Singapore}},
     month = {April},
     year = {1983}
 }
 @article{slat87a,
     title = {{Domination and location in acyclic graphs}},
-    author = {P. J. Slater},
+    author = {P. Slater},
     journal = {{Networks}},
     year = {1987},
     pages = {55--64},
@@ -3818,7 +3818,7 @@
 }
 @article{slat88a,
     title = {{Dominating and reference sets in a graph}},
-    author = {P. J. Slater},
+    author = {P. Slater},
     journal = {{Journal of Mathematical and Physical Sciences}},
     year = {1988},
     pages = {445--455},
@@ -3826,7 +3826,7 @@
 }
 @article{slat95a,
     title = {{Locating dominating sets and locating-dominating sets}},
-    author = {P. J. Slater},
+    author = {P. Slater},
     journal = {{Graph Theory, Combinatorics, and Applications: Proceedings of the 7th Quadrennial International Conference on the Theory and Applications of Graphs}},
     year = {1995},
     pages = {1073--1079},
@@ -3834,7 +3834,7 @@
 }
 @article{slat02a,
     title = {{Fault-tolerant locating-dominating sets}},
-    author = {P. J. Slater},
+    author = {P. Slater},
     journal = {{Discrete Mathematics}},
     year = {2002},
     pages = {179--189},
@@ -3842,7 +3842,7 @@
 }
 @article{slat09,
     title = {{Liar's domination}},
-    author = {P. J. Slater},
+    author = {P. Slater},
     journal = {{Networks}},
     year = {2009},
     pages = {70--74},
@@ -3850,7 +3850,7 @@
 }
 @article{slat13,
     title = {{A framework for faults in detectors within network monitoring systems}},
-    author = {P. J. Slater},
+    author = {P. Slater},
     journal = {{WSEAS Transactions on Mathematics}},
     year = {2013},
     pages = {911--916},
@@ -3858,7 +3858,7 @@
 }
 @article{slat14p,
     title = {{A sharp lower bound for locating-dominating sets in trees}},
-    author = {P. J. Slater and J. L. Sewell},
+    author = {P. Slater and J. Sewell},
     journal = {{Australasian Journal of Combinatorics}},
     year = {2014},
     pages = {136--149},
@@ -3866,7 +3866,7 @@
 }
 @article{slat18,
     title = {{Independent locating-dominating sets and identifying codes in graphs}},
-    author = {P. J. Slater and J. L. Sewell},
+    author = {P. Slater and J. Sewell},
     journal = {{Journal of Combinatorial Mathematics and Combinatorial Computing}},
     year = {2018},
     pages = {261--272},
@@ -4412,7 +4412,7 @@
 }
 @article{seo13,
     title = {{Open locating-dominating interpolation for trees}},
-    author = {S. J. Seo and P. J. Slater},
+    author = {S. Seo and P. Slater},
     journal = {{Congressus Numerantium}},
     year = {2013},
     pages = {145--152},
@@ -4420,7 +4420,7 @@
 }
 @article{colb87a,
     title = {{Locating dominating sets in series parallel networks}},
-    author = {C. J. Colbourn and P. J. Slater and L. K. Stewart},
+    author = {C. J. Colbourn and P. Slater and L. K. Stewart},
     journal = {{Congressus Numerantium}},
     year = {1987},
     pages = {135--162},
@@ -4470,7 +4470,7 @@
 }
 @article{seo18a,
     title = {{Generalized set dominating and separating systems}},
-    author = {S. J. Seo and P. J. Slater},
+    author = {S. Seo and P. Slater},
     journal = {{Journal of Combinatorial Mathematics and Combinatorial Computing}},
     volume = {104},
     pages = {15--29},
@@ -4478,7 +4478,7 @@
 }
 @article{jean22,
     title = {{Extremal cubic graphs for fault-tolerant locating domination}},
-    author = {D. C. Jean and S. J. Seo},
+    author = {D. C. Jean and S. Seo},
     journal = {{Theoretical Computer Science}},
     year = {2022},
     pages = {94--106},
@@ -4487,7 +4487,7 @@
 }
 @article{jean23,
     title = {{Optimal error-detecting open-locating-dominating set on the infinite triangular grid}},
-    author = {D. C. Jean and S. J. Seo},
+    author = {D. C. Jean and S. Seo},
     journal = {{Discussiones Mathematicae Graph Theory}},
     year = {2023},
     pages = {445--455},
@@ -4497,7 +4497,7 @@
 }
 @article{jean23a,
     title = {{Progress on fault-tolerant locating-dominating sets}},
-    author = {D. C. Jean and S. J. Seo},
+    author = {D. C. Jean and S. Seo},
     journal = {{Discrete Mathematics, Algorithms and Applications}},
     volume = {15},
     number = {2},
@@ -4507,7 +4507,7 @@
 }
 @article{jean23b,
     title = {{On Redundant Locating-Dominating Sets}},
-    author = {D. C. Jean and S. J. Seo},
+    author = {D. C. Jean and S. Seo},
     journal = {{Discrete Applied Mathematics}},
     volume = {329},
     year = {2023},
@@ -4516,7 +4516,7 @@
 }
 @article{jean24,
     title = {{Fault-Tolerant Identifying Codes in Special Classes of Graphs}},
-    author = {D. C. Jean and S. J. Seo},
+    author = {D. C. Jean and S. Seo},
     journal = {{Discussiones Mathematicae Graph Theory}},
     volume = {44},
     number = {2},
