--- a/refs.bib
+++ b/refs.bib
@@ -4478,7 +4478,7 @@
 }
 @article{jean22,
     title = {{Extremal cubic graphs for fault-tolerant locating domination}},
-    author = {D. C. Jean and S. Seo},
+    author = {D. Jean and S. Seo},
     journal = {{Theoretical Computer Science}},
     year = {2022},
     pages = {94--106},
@@ -4487,7 +4487,7 @@
 }
 @article{jean23,
     title = {{Optimal error-detecting open-locating-dominating set on the infinite triangular grid}},
-    author = {D. C. Jean and S. Seo},
+    author = {D. Jean and S. Seo},
     journal = {{Discussiones Mathematicae Graph Theory}},
     year = {2023},
     pages = {445--455},
@@ -4497,7 +4497,7 @@
 }
 @article{jean23a,
     title = {{Progress on fault-tolerant locating-dominating sets}},
-    author = {D. C. Jean and S. Seo},
+    author = {D. Jean and S. Seo},
     journal = {{Discrete Mathematics, Algorithms and Applications}},
     volume = {15},
     number = {2},
@@ -4507,7 +4507,7 @@
 }
 @article{jean23b,
     title = {{On Redundant Locating-Dominating Sets}},
-    author = {D. C. Jean and S. Seo},
+    author = {D. Jean and S. Seo},
     journal = {{Discrete Applied Mathematics}},
     volume = {329},
     year = {2023},
@@ -4516,7 +4516,7 @@
 }
 @article{jean24,
     title = {{Fault-Tolerant Identifying Codes in Special Classes of Graphs}},
-    author = {D. C. Jean and S. Seo},
+    author = {D. Jean and S. Seo},
     journal = {{Discussiones Mathematicae Graph Theory}},
     volume = {44},
     number = {2},
