--- a/refs.bib
+++ b/refs.bib
@@ -1162,6 +1162,16 @@
     volume = {30},
     doi = {10.1007/s00373-013-1311-2}
 }
+@article{salo24,
+    title = {{Finding codes on infinite grids automatically}},
+    author = {V. Salo and I. T\"{o}rm\"{a}},
+    journal = {Fundamenta Informaticae},
+    volume = {191},
+    number = {3--4},
+    pages = {331--349},
+    year = {2024},
+    doi = {10.3233/FI-242186}
+}
 
 
 
