--- a/refs.bib
+++ b/refs.bib
@@ -1155,7 +1155,7 @@
 }
 @article{henn13,
     title = {{Distinguishing-transversal in hypergraphs and identifying open codes in cubic graphs}},
-    author = {M. A. Henning and A. Yeo},
+    author = {M. Henning and A. Yeo},
     journal = {{Graphs and Combinatorics}},
     year = {2014},
     pages = {909--932},
@@ -1171,6 +1171,25 @@
     pages = {331--349},
     year = {2024},
     doi = {10.3233/FI-242186}
+}
+@article{samp24,
+    title = {{Density of identifying codes of hexagonal grids with finite number of rows}},
+    author = {R. Sampaio and G. Sobral and Y. Wakabayashi},
+    journal = {RAIRO-Operations Research},
+    volume = {58},
+    number = {2},
+    pages = {1633--1651},
+    year = {2024},
+    publisher = {EDP Sciences},
+    doi = {10.1051/ro/2024046}
+}
+@article{jean24b,
+    title = {{Optimal error-detection system for identifying codes}},
+    author = {D. Jean and S. Seo},
+    journal = {Networks},
+    year = {2024},
+    publisher = {Wiley Online Library},
+    doi = {10.1002/net.22254}
 }
 
 
@@ -4524,7 +4543,7 @@
     pages = {106--125},
     doi = {10.1016/j.dam.2023.01.023}
 }
-@article{jean24,
+@article{jean24a,
     title = {{Fault-Tolerant Identifying Codes in Special Classes of Graphs}},
     author = {D. Jean and S. Seo},
     journal = {{Discussiones Mathematicae Graph Theory}},
