--- a/refs.bib
+++ b/refs.bib
@@ -1191,7 +1191,54 @@
     publisher = {Wiley Online Library},
     doi = {10.1002/net.22254}
 }
-
+@article{jean22,
+    title = {{Extremal cubic graphs for fault-tolerant locating domination}},
+    author = {D. Jean and S. Seo},
+    journal = {{Theoretical Computer Science}},
+    year = {2022},
+    pages = {94--106},
+    volume = {917},
+    doi = {10.1016/j.tcs.2022.03.014}
+}
+@article{jean23,
+    title = {{Optimal error-detecting open-locating-dominating set on the infinite triangular grid}},
+    author = {D. Jean and S. Seo},
+    journal = {{Discussiones Mathematicae Graph Theory}},
+    year = {2023},
+    pages = {445--455},
+    volume = {43},
+    number = {2},
+    doi = {10.7151/dmgt.2374}
+}
+@article{jean23a,
+    title = {{Progress on fault-tolerant locating-dominating sets}},
+    author = {D. Jean and S. Seo},
+    journal = {{Discrete Mathematics, Algorithms and Applications}},
+    volume = {15},
+    number = {2},
+    pages = {14},
+    year = {2023},
+    doi = {10.1142/S179383092250080X}
+}
+@article{jean23b,
+    title = {{On Redundant Locating-Dominating Sets}},
+    author = {D. Jean and S. Seo},
+    journal = {{Discrete Applied Mathematics}},
+    volume = {329},
+    year = {2023},
+    pages = {106--125},
+    doi = {10.1016/j.dam.2023.01.023}
+}
+@article{jean24a,
+    title = {{Fault-Tolerant Identifying Codes in Special Classes of Graphs}},
+    author = {D. Jean and S. Seo},
+    journal = {{Discussiones Mathematicae Graph Theory}},
+    volume = {44},
+    number = {2},
+    year = {2024},
+    pages = {591--611},
+    doi = {10.7151/dmgt.2465}
+}
 
 
 
@@ -4505,51 +4552,12 @@
     pages = {15--29},
     year = {2018}
 }
-@article{jean22,
-    title = {{Extremal cubic graphs for fault-tolerant locating domination}},
+@article{jean24c,
+    title = {{Fault-tolerant locating-dominating sets on the infinite tumbling block graph}},
     author = {D. Jean and S. Seo},
-    journal = {{Theoretical Computer Science}},
-    year = {2022},
-    pages = {94--106},
-    volume = {917},
-    doi = {10.1016/j.tcs.2022.03.014}
-}
-@article{jean23,
-    title = {{Optimal error-detecting open-locating-dominating set on the infinite triangular grid}},
-    author = {D. Jean and S. Seo},
-    journal = {{Discussiones Mathematicae Graph Theory}},
-    year = {2023},
-    pages = {445--455},
-    volume = {43},
-    number = {2},
-    doi = {10.7151/dmgt.2374}
-}
-@article{jean23a,
-    title = {{Progress on fault-tolerant locating-dominating sets}},
-    author = {D. Jean and S. Seo},
-    journal = {{Discrete Mathematics, Algorithms and Applications}},
-    volume = {15},
-    number = {2},
-    pages = {14},
-    year = {2023},
-    doi = {10.1142/S179383092250080X}
-}
-@article{jean23b,
-    title = {{On Redundant Locating-Dominating Sets}},
-    author = {D. Jean and S. Seo},
-    journal = {{Discrete Applied Mathematics}},
-    volume = {329},
-    year = {2023},
-    pages = {106--125},
-    doi = {10.1016/j.dam.2023.01.023}
-}
-@article{jean24a,
-    title = {{Fault-Tolerant Identifying Codes in Special Classes of Graphs}},
-    author = {D. Jean and S. Seo},
-    journal = {{Discussiones Mathematicae Graph Theory}},
-    volume = {44},
-    number = {2},
+    journal = {{Australasian Journal of Combinatorics}},
+    volume = {90},
+    number = {1},
     year = {2024},
-    pages = {591--611},
-    doi = {10.7151/dmgt.2465}
+    pages = {29--45}
 }
