--- a/refs.bib
+++ b/refs.bib
@@ -1239,7 +1239,15 @@
     pages = {591--611},
     doi = {10.7151/dmgt.2465}
 }
-
+@article{jean25,
+    title = {{Error-Correcting Open-Locating-Dominating Sets}},
+    author = {D. Jean and S. Seo},
+    journal = {{Congressus Numerantium}},
+    volume = {235},
+    year = {2025},
+    pages = {23--40},
+    doi = {10.61091/cn235-03}
+}
 
 
 
